# Ilac-Hatirlatici-Mobil-Uygulama

./: App.js  README.md  alarm tablosu.txt  app.json  package-lock.json  package.json
Components/: AlarmCard.js
Rust_API/ilac-takip-api/: .env  Cargo.toml
Rust_API/ilac-takip-api/src/: db.rs  main.rs  server.rs  verimodelleri.rs
Rust_API/ilac-takip-api/src/routes/: alarm_ekle.rs  alarm_listele.rs  login.rs  mod.rs  signup.rs
View/: AddAlarm.js  AddFamilyMember.js  AlarmListScreen.js  LoginScreen.js  MainMenu.js  SingUpScreen.js
